logic update: end of login, logout, and default create
