# src/Controller/LoginController.php
@@ -2,8 +2,13 @@
 
 namespace App\Controller;
 
+use App\Http\JsonBodyResponse;
+use App\Model\Entity\User;
+use App\Network\exception\UnprocessedEntityException;
 use Cake\Auth\DefaultPasswordHasher;
-use Cake\Http\Response;
+use Cake\Core\Configure;
+use Cake\Http\Client;
+use Cake\Network\Exception\UnauthorizedException;
 use Cake\Utility\Text;
 use Cake\Validation\Validation;
 use Eswipe\Model\FieldError;
@@ -21,72 +26,87 @@ class LoginController extends AppController
      */
     public function basic()
     {
-        $email = $this->request->getParam('email');
-        $password = $this->request->getParam('password');
-        $instanceId = $this->request->getParam('instance_id');
+        $email = $this->request->getQuery('email');
+        $password = $this->request->getQuery('password');
+        $instanceId = $this->request->getQuery('instance_id');
 
         if (!Validation::email($email) || !is_string($password) || strlen($password) > 250 || !is_string($instanceId) || strlen($instanceId) > 250) {
-            $fieldError = new FieldError();
-            $fieldError->code = 422;
 
+            $message = null;
             if (!Validation::email($email)) {
-                $fieldError->field = 'email';
-                $fieldError->message = 'not an email';
+                $message = 'not an "email"';
             } else if (!is_string($password) || strlen($password) > 250) {
-                $fieldError->field = 'password';
-                $fieldError->message = 'unauthorized password type';
+                $message = 'unauthorized "password" type';
             } else if (!is_string($instanceId) || strlen($instanceId) > 250) {
-                $fieldError->field = 'instance_id';
-                $fieldError->message = 'unauthorized instance_id type';
+                $message = 'unauthorized "instance_id" type';
             }
 
-            $response = (new Response())->withStatus(422, 'Unprocessable Entity')
-                ->withType('json')
-                ->withStringBody(json_encode($fieldError));
-            return $response;
+            throw new UnprocessedEntityException($message);
         }
 
-        $hashedpassword = (new DefaultPasswordHasher())->hash($password);
         $this->loadModel('Users');
 
+        /** @var User $user */
         $user = $this->Users->find()
             ->select(['id', 'email', 'password'])
-            ->where(['email' => $email,
-                'password' => $hashedpassword])
+            ->where(['email' => $email])
             ->first();
 
-        if ($user) {
-            $this->loadModel('Sessions');
-            $uuid = Text::uuid();
-
-            $session = $this->Sessions->newEntity();
-            $session->string_uuid = $uuid;
-            $this->Sessions->save($session);
-
-            $token = new Token();
-            $token->auth = $uuid;
-
-            return (new Response())->withStatus(200, 'OK')
-                ->withType('json')->withBody(json_encode($token));
-        } else {
-            $response = (new Response())->withStatus(401, 'Unauthorized');
-            return $response;
+        if (is_null($user) || !(new DefaultPasswordHasher())->check($password, $user->password)) {
+            throw new UnauthorizedException();
         }
+
+        $user->instance_id = $instanceId;
+
+        $this->loadModel('Sessions');
+
+        $session = $this->Sessions->find('all', ['condition' => ['user_id' => $user->id]])->first();
+
+        if (is_null($session)) {
+            $session = $this->Sessions->newEntity();
+            $session->uuid = Text::uuid();
+            $session->user = $user;
+            $this->Sessions->save($session);
+        }
+
+        $token = new Token();
+        $token->auth = $session->uuid;
+
+
+        return JsonBodyResponse::okResponse($this->response, $token);
     }
 
     /**
      * Login via facebook
      */
-    public function facebookLogin()
+    public function facebook()
     {
+        //TODO
 
-    }
+        /*$facebook_auth = $this->request->getQuery('facebook_auth');
+        $instanceId = $this->request->getQuery('instance_id');
 
-    /**
-     * Logout
-     */
-    public function logout()
-    {
+        //TODO
+        debug($facebook_auth);
+        debug(Configure::read('facebook.key'));
 
+        $client = new Client();
+        $answer = $client->get('https://graph.facebook.com/debug_token', ['
+        input_token' => $facebook_auth, 'access_token' => Configure::read('facebook.key')]);
+
+        debug($answer);
+        debug($this->request->getData());
+        $user = $this->request->getData();
+        /*
+         * (
+                [first_name] => string
+                [last_name] => string
+                [date_of_birth] => string
+                [gender] => male
+                [email] => user@example.com
+            )
+
+         */
+        return $this->response;
     }
 }
